--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!doctype html>
 <html lang="en" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shubham Dahatonde | AI Enthusiast & Innovator | ISRO Researcher</title>
-    <meta name="description" content="Shubham Dahatonde - Results-driven Computer Science Engineer with expertise in IoT, AI, and healthcare technologies. ISRO Researcher specializing in patent-backed innovations." />
-    <meta name="keywords" content="Shubham Dahatonde, AI Engineer, IoT, ISRO, Machine Learning, Computer Science, Researcher" />
-    <meta name="author" content="Shubham Dahatonde" />
-    <link rel="canonical" href="https://shubhamdahatonde.com" />
 
-    <meta property="og:title" content="Shubham Dahatonde | AI Enthusiast & Innovator" />
-    <meta property="og:description" content="Results-driven professional with expertise in IoT, AI, and healthcare technologies. ISRO Researcher." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shubham Dahatonde | AI Enthusiast & Innovator | ISRO Researcher</title>
+  <meta name="description"
+    content="Shubham Dahatonde - Results-driven Computer Science Engineer with expertise in IoT, AI, and healthcare technologies. ISRO Researcher specializing in patent-backed innovations." />
+  <meta name="keywords"
+    content="Shubham Dahatonde, AI Engineer, IoT, ISRO, Machine Learning, Computer Science, Researcher" />
+  <meta name="author" content="Shubham Dahatonde" />
+  <link rel="canonical" href="https://shubhamdahatonde.com" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@shubham" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Shubham Dahatonde | AI Enthusiast & Innovator" />
+  <meta property="og:description"
+    content="Results-driven professional with expertise in IoT, AI, and healthcare technologies. ISRO Researcher." />
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:image" content="/og-image.png" /> -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@shubham" />
+  <!-- <meta name="twitter:image" content="/og-image.png" /> -->
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
