feat: Implement 'Orbital Horizon' theme and custom OG image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <meta property="og:description"
     content="Results-driven professional with expertise in IoT, AI, and healthcare technologies. ISRO Researcher." />
   <meta property="og:type" content="website" />
-  <!-- <meta property="og:image" content="/og-image.png" /> -->
+  <meta property="og:image" content="/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@shubham" />
-  <!-- <meta name="twitter:image" content="/og-image.png" /> -->
+  <meta name="twitter:image" content="/og-image.png" />
 </head>
 
 <body>
